Version 1.0.0
--------------------------------------------------------------------------
4 April 2007
+ Updated language functions.

Version 0.0.3
---------------------------------------------------------------------------
19 February 2007
+ Reduced translate calls.

15 February 2007
+ Added translate functions.