@@ -1,3 +1,7 @@
+10 October 2007
++ Added different window titles.
++ Increased popup width.
+
 Version 1.0.0
 --------------------------------------------------------------------------
 4 April 2007
